--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/x-icon" href="/assets/Logo.png">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.main.css">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="src/main.css">
 
         <!--Mouse Cursor-->
         <div id="blob"></div>
@@ -19,13 +19,13 @@
     <body>
         <section id="hero">
 
-            <a id="DLToggleA" href="#"><button class="darkLightToggle"><img src="../assets/DarkLightToggleWhite.png" alt="Light Mode toggle"></button></a>
+            <a id="DLToggleA" href="#"><button class="darkLightToggle"><img src="assets/DarkLightToggleWhite.png" alt="Light Mode toggle"></button></a>
 
                 <h1>Hi, I am <span>Dhiren</span></h1>
                 <h2>A front-end Developer and Designer</h2>
                 <h4>Currently living in Sydney.</h4>
 
-                <a class="Resume" href="../assets/Resume.pdf" target="_blank"><button class="myResume">See my Resume</button></a>
+                <a class="Resume" href="assets/Resume.pdf" target="_blank"><button class="myResume">See my Resume</button></a>
 
 
         </section>
@@ -43,7 +43,7 @@
         </section>
 
 
-        <script src="main.js"></script>
+        <script src="src/main.js"></script>
 
     </body>
 
