About Me popup on hover

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
             <a id="DLToggleA" href="#"><button class="darkLightToggle"><img src="assets/DarkLightToggleWhite.png" alt="Light Mode toggle"></button></a>
 
                 <h1>Hi, I am <span>Dhiren</span></h1>
+                <div class="content">
+                    <h5>About Me</h5>
+                    <p>
+                        Im Dhiren Bharadwaj,
+                        I was born in India on 24th July 2010 and
+                        I moved to Australia on Feb of 2022.
+                        I really love to develop web apps using
+                        HTML, CSS and JavaScript. I specialise in Front - End Development and
+                        I love making open source projects and games.
+                    </p>
+                </div>
+
                 <h2>A front-end Developer and Designer</h2>
                 <h4>Currently living in Sydney.</h4>
 
