SKILLS section complete

--- a/index.html
+++ b/index.html
@@ -42,13 +42,100 @@
 
         </section>
 
+
+        <section id="skills">
+            <h1>SKILLS</h1>
+
+            <div class="cards">
+
+                <div class="card">
+                    <div class="card-border"></div>
+                    <div class="card-content">
+                        <img class="html" src="assets/skills/HTML5.png" alt="HTML 5 Icon">
+                        <div class="card-text">
+                            <h1 class="html5H1">HTML 5</h1>
+                            <p>HyperText Markup Language 5</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-border"></div>
+                    <div class="card-content">
+                        <img class="html" src="assets/skills/CSS.png" alt="CSS Icon">
+                        <div class="card-text">
+                            <h1 class="cssH1">CSS</h1>
+                            <p>Cascading Style Sheets</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-border"></div>
+                    <div class="card-content">
+                        <img class="jsIcon" src="assets/skills/JS.png" alt="JavaScript Icon">
+                        <div class="card-text">
+                            <h1 class="jsH1">JS</h1>
+                            <p>Vanilla Java Script</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-border"></div>
+                    <div class="card-content">
+                        <img class="jsIcon" src="assets/skills/VSC.png" alt="VisualStudioCode Icon">
+                        <div class="card-text">
+                            <h1 class="vscH1">VS Code</h1>
+                            <p>Visual Studio Code</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-border"></div>
+                    <div class="card-content">
+                        <img class="wsIcon" src="assets/skills/WEBSTORM.png" alt="WebStorm Icon">
+                        <div class="card-text">
+                            <h1 class="wsH1">WebStorm</h1>
+                            <p>My favourite IDE</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-border"></div>
+                    <div class="card-content">
+                        <img class="figmaIcon" src="assets/skills/FIGMA.png" alt="Figma Icon">
+                        <div class="card-text">
+                            <h1 class="figmaH1">Figma</h1>
+                            <p>Front - End Design Software</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-border"></div>
+                    <div class="card-content">
+                        <img class="figmaIcon" src="assets/skills/PENPOT.png" alt="PenPot Icon">
+                        <div class="card-text">
+                            <h1 class="penpotH1">PenPot</h1>
+                            <p>My favourite Web Design Software</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <p class="future">I would love to learn ReactJS or ThreeJS in the future.</p>
+
+        </section>
+
+
         <section id="projects">
 
         </section>
 
-        <section id="about">
-
-        </section>
 
         <section id="contact">
 
