SKILLS links update

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <div class="cards">
 
-                <a href="https://en.wikipedia.org/wiki/HTML5">
+                <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank">
                     <div class="card">
                         <div class="card-border"></div>
                         <div class="card-content">
@@ -59,7 +59,7 @@
                     </div>
                 </a>
 
-                <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">
+                <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">
                     <div class="card">
                         <div class="card-border"></div>
                         <div class="card-content">
@@ -72,7 +72,7 @@
                     </div>
                 </a>
 
-                <a href="https://en.wikipedia.org/wiki/JavaScript">
+                <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">
                     <div class="card">
                         <div class="card-border"></div>
                         <div class="card-content">
@@ -85,7 +85,7 @@
                     </div>
                 </a>
 
-                <a href="https://code.visualstudio.com">
+                <a href="https://code.visualstudio.com" target="_blank">
                     <div class="card">
                         <div class="card-border"></div>
                         <div class="card-content">
@@ -98,7 +98,7 @@
                     </div>
                 </a>
 
-                <a href="https://www.jetbrains.com/webstorm/">
+                <a href="https://www.jetbrains.com/webstorm/" target="_blank">
                     <div class="card">
                         <div class="card-border"></div>
                         <div class="card-content">
@@ -111,7 +111,7 @@
                     </div>
                 </a>
 
-                <a href="https://www.figma.com">
+                <a href="https://www.figma.com" target="_blank">
                     <div class="card">
                         <div class="card-border"></div>
                         <div class="card-content">
@@ -124,7 +124,7 @@
                     </div>
                 </a>
 
-                <a href="https://penpot.app">
+                <a href="https://penpot.app" target="_blank">
                     <div class="card">
                         <div class="card-border"></div>
                         <div class="card-content">
