Job Status Addition

--- a/index.html
+++ b/index.html
@@ -17,31 +17,41 @@
 
 
     <body>
+
         <section id="hero">
 
-                <h1>Hi, I am <span>Dhiren</span></h1>
-                <div class="content">
-                    <h5>About Me</h5>
-                    <p>
-                        Im Dhiren Bharadwaj,
-                        I was born in India on 24th July 2010 and
-                        I moved to Australia on Feb of 2022.
-                        I really love to develop web apps using
-                        HTML, CSS and JavaScript. I specialise in Front - End Development and
-                        I love making open source projects and games.
-                    </p>
+            <div class="badge-container">
+                <div class="circle"></div>
+                <div class="text-container">
+                    <p class="title">Job Status</p>
+                    <p class="subtitle">Not looking</p>
                 </div>
+            </div>
 
-                <h2>A front-end Developer and Designer</h2>
-                <h4>Currently living in Sydney.</h4>
+            <h1>Hi, I am <span>Dhiren</span></h1>
+            <div class="content">
+                <h5>About Me</h5>
+                <p>
+                    Im Dhiren Bharadwaj,
+                    I was born in India on 24th July 2010 and
+                    I moved to Australia on Feb of 2022.
+                    I really love to develop web apps using
+                    HTML, CSS and JavaScript. I specialise in Front - End Development and
+                    I love making open source projects and games.
+                </p>
+            </div>
 
-                <a class="Resume" href="assets/Resume.pdf" target="_blank"><button class="myResume">See my Resume</button></a>
+            <h2>A front-end Developer and Designer</h2>
+            <h4>Currently living in Sydney.</h4>
+
+            <a class="Resume" href="assets/Resume.pdf" target="_blank"><button class="myResume">See my Resume</button></a>
 
 
         </section>
 
 
         <section id="skills">
+
             <h1>SKILLS</h1>
 
             <div class="cards">
