Tablet - Portfolio Addition

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <div class="badge-container">
                 <div class="circle"></div>
                 <div class="text-container">
-                    <p class="title">Job Status</p>
+                    <p class="jobStatus">Job Status</p>
                     <p class="subtitle">Not looking</p>
                 </div>
             </div>
 
-            <h1>Hi, I am <span>Dhiren</span></h1>
+            <h1 class="hi">Hi, I am <span class="Dhiren">Dhiren</span></h1>
             <div class="content">
                 <h5>About Me</h5>
                 <p>
@@ -41,10 +41,56 @@
                 </p>
             </div>
 
-            <h2>A front-end Developer and Designer</h2>
+            <h2 class="shortDisc">A front-end Developer and Designer</h2>
             <h4>Currently living in Sydney.</h4>
 
-            <a class="Resume" href="assets/Resume.pdf" target="_blank"><button class="myResume">See my Resume</button></a>
+            <a class="Resume"><button class="myResume">See my Resume</button></a>
+
+
+            <div class="modal-overlay">
+                <div class="modal">
+                    <div class="modal-notch"></div>
+                    <div class="modal-content">
+
+                        <div class="resume-header">
+                            <h1>Dhiren Bharadwaj</h1>
+                            <p class="title">Front - End Web Developer and Designer</p>
+                            <p>Innovative task-driven developer with 4+ years of experience in web design and development. Equipped with a record of success in consistently identifying and providing the technological needs of companies through meticulous innovation.</p>
+                            <div class="contact-info">
+                                <span>pdhiroxy@gmail.com</span>
+                                <span>Sydney, Australia</span>
+                                <span>+61 469 813 015</span>
+                            </div>
+                        </div>
+
+
+                        <div class="section-title">TECHNICAL SKILLS</div>
+                        <div class="skills-container">
+                            <div class="skills-list">
+                                <div>HTML5</div>
+                                <div class="skill-bar"><div class="skill-level" style="width: 90%"></div></div>
+
+                                <div>CSS3</div>
+                                <div class="skill-bar"><div class="skill-level" style="width: 85%"></div></div>
+
+                                <div>JavaScript</div>
+                                <div class="skill-bar"><div class="skill-level" style="width: 80%"></div></div>
+                            </div>
+
+                        </div>
+
+                        <div class="section-title">EDUCATION</div>
+                        <div>
+                            <h3 class="job-title">Parramatta High School</h3>
+                            <p class="company">High School in Sydney, Australia</p>
+                        </div>
+
+                        <button class="close-button">Close</button>
+                </div>
+
+                    <div class="modal-indicator"></div>
+                </div>
+            </div>
 
 
         </section>
@@ -52,7 +98,7 @@
 
         <section id="skills">
 
-            <h1>SKILLS</h1>
+            <h1 class="skillsH1">SKILLS</h1>
 
             <div class="cards">
 
