Scroll Locking Portfolio

--- a/index.html
+++ b/index.html
@@ -46,50 +46,51 @@
 
             <a class="Resume"><button class="myResume">See my Resume</button></a>
 
+            <dialog open>
+                <div class="modal-overlay">
+                    <div class="modal">
+                        <div class="modal-notch"></div>
+                        <div class="modal-content">
 
-            <div class="modal-overlay">
-                <div class="modal">
-                    <div class="modal-notch"></div>
-                    <div class="modal-content">
-
-                        <div class="resume-header">
-                            <h1>Dhiren Bharadwaj</h1>
-                            <p class="title">Front - End Web Developer and Designer</p>
-                            <p>Innovative task-driven developer with 4+ years of experience in web design and development. Equipped with a record of success in consistently identifying and providing the technological needs of companies through meticulous innovation.</p>
-                            <div class="contact-info">
-                                <span>pdhiroxy@gmail.com</span>
-                                <span>Sydney, Australia</span>
-                            </div>
-                        </div>
-
-
-                        <div class="section-title">TECHNICAL SKILLS</div>
-                        <div class="skills-container">
-                            <div class="skills-list">
-                                <div>HTML5</div>
-                                <div class="skill-bar"><div class="skill-level" style="width: 90%"></div></div>
-
-                                <div>CSS3</div>
-                                <div class="skill-bar"><div class="skill-level" style="width: 85%"></div></div>
-
-                                <div>JavaScript</div>
-                                <div class="skill-bar"><div class="skill-level" style="width: 80%"></div></div>
+                            <div class="resume-header">
+                                <h1>Dhiren Bharadwaj</h1>
+                                <p class="title">Front - End Web Developer and Designer</p>
+                                <p>Innovative task-driven developer with 4+ years of experience in web design and development. Equipped with a record of success in consistently identifying and providing the technological needs of companies through meticulous innovation.</p>
+                                <div class="contact-info">
+                                    <span>pdhiroxy@gmail.com</span>
+                                    <span>Sydney, Australia</span>
+                                </div>
                             </div>
 
-                        </div>
 
-                        <div class="section-title">EDUCATION</div>
-                        <div>
-                            <h3 class="job-title">Parramatta High School</h3>
-                            <p class="company">High School in Sydney, Australia</p>
-                        </div>
+                            <div class="section-title">TECHNICAL SKILLS</div>
+                            <div class="skills-container">
+                                <div class="skills-list">
+                                    <div>HTML5</div>
+                                    <div class="skill-bar"><div class="skill-level" style="width: 90%"></div></div>
 
-                        <button class="close-button">Close</button>
+                                    <div>CSS3</div>
+                                    <div class="skill-bar"><div class="skill-level" style="width: 85%"></div></div>
+
+                                    <div>JavaScript</div>
+                                    <div class="skill-bar"><div class="skill-level" style="width: 80%"></div></div>
+                                </div>
+
+                            </div>
+
+                            <div class="section-title">EDUCATION</div>
+                            <div>
+                                <h3 class="job-title">Parramatta High School</h3>
+                                <p class="company">High School in Sydney, Australia</p>
+                            </div>
+
+                            <button class="close-button">Close</button>
+                    </div>
+
+                        <div class="modal-indicator"></div>
+                    </div>
                 </div>
-
-                    <div class="modal-indicator"></div>
-                </div>
-            </div>
+            </dialog>
 
 
         </section>
